# dotai

./: .env.example  .gitignore  .prettierrc.json  CHANGELOG.md  LOAD_SPORTS_DATA.md  Makefile  README.md  START.md  cache-backup-fix_e651dfe1.plan.md  create_sports_tables.sql  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  start-highlights.sh  tsconfig.json
services/data-workers/: README.md  pyproject.toml
services/data-workers/app/: __init__.py  config.py  main.py
services/data-workers/app/services/: __init__.py  cache.py
services/data-workers/app/workers/: __init__.py  market_prices.py  odds_snapshot.py  youtube_cache.py
services/theory-engine-api/: README.md  alembic.ini  clear_cache.py  pyproject.toml  refresh_youtube_token.py  run_migration.py
services/theory-engine-api/ai_prompts/: conspiracy_narrative.md  sports_highlight_channel.md
services/theory-engine-api/alembic/: env.py
services/theory-engine-api/alembic/versions/: 002_add_playlist_tables.py  003_add_playlist_metadata.py  004_add_strategy_tables.py  005_add_sports_data_tables.py  006_add_team_name_index.py  007_change_team_unique_constraint.py  008_team_constraint_swap.py  009_add_sports_game_odds_identity.py  010_add_crypto_tables.py  011_add_equity_tables.py  012_add_theory_run_table.py  013_add_side_to_odds_unique_index.py
services/theory-engine-api/app/: __init__.py  celery_client.py  config.py  db.py  db_models.py  description_analyzer.py  highlight_parser.py  logging_config.py  main.py  metrics.py  playlist_helpers.py  sports_search.py  sports_search_example.py  watch_token.py
services/theory-engine-api/app/routers/: __init__.py  bets.py  common.py  conspiracies.py  crypto.py  crypto_data.py  highlights.py  playlist.py  sports_data.py  sports_eda.py  sports_eda_analyze.py  sports_eda_feature.py  sports_eda_helpers.py  sports_eda_micro.py  sports_eda_model.py  sports_eda_schemas.py  sports_eda_shared.py  sports_eda_walkforward.py  sports_models.py  stocks.py  stocks_data_admin.py  stocks_strategy.py  strategy.py  strategy_models.py  theory_admin.py  (+5 more)
services/theory-engine-api/scripts/: __init__.py  clear_cache.py  clear_conspiracy_cache.py  refresh_youtube_token.py
services/theory-engine-api/tests/: conftest.py  test_backtest_pipeline.py  test_feature_layers_validation.py  test_mega_pipeline_snapshot.py  test_micro_models.py
services/theory-stocks-worker/: pyproject.toml
services/theory-stocks-worker/stocks_worker/: __init__.py  config.py  db.py  logging.py  services.py  tasks.py
(+440 files in other folders)
