[project]
name = "data-workers"
version = "0.1.0"
description = "Async workers for caching external data (YouTube, odds, prices, news)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0,<6.0.0",
    "redis>=5.0.0,<6.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.1.0,<25.0.0",
    "httpx>=0.27.0,<0.28.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0,<25.0.0",
    "ruff>=0.7.0,<0.8.0",
    "mypy>=1.11.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

