[project]
name = "theory-engine-api"
version = "0.1.0"
description = "FastAPI service powering dock108 theory submissions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "pydantic>=2.8.0,<3.0.0",
  "httpx>=0.27.0,<0.28.0",
  "redis>=5.0.0,<6.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "structlog>=24.1.0,<25.0.0",
  "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
  "asyncpg>=0.29.0,<0.30.0",
  "alembic>=1.13.0,<2.0.0",
  "openai>=1.0.0,<2.0.0",
  "pyjwt>=2.10.0,<3.0.0",
  "celery>=5.4.0,<6.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.3.2,<9.0.0"]

[tool.uv]
dev-dependencies = [
  "black>=24.8.0,<25.0.0",
  "ruff>=0.7.0,<0.8.0",
  "pytest>=8.3.2,<9.0.0",
  "mypy>=1.11.0,<2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

