[project]
name = "theory-stocks-worker"
version = "0.1.0"
description = "Stocks (equities) market data ingestion worker for dock108 theory engine."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "alembic>=1.13.0,<2.0.0",
  "httpx>=0.27.0,<0.28.0",
  "structlog>=24.1.0,<25.0.0",
  "celery>=5.4.0,<6.0.0",
  "redis>=5.0.0,<6.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "yfinance>=0.2.0,<0.3.0",
]

[tool.uv]
dev-dependencies = [
  "black>=24.8.0,<25.0.0",
  "ruff>=0.7.0,<0.8.0",
  "pytest>=8.3.2,<9.0.0",
  "mypy>=1.11.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stocks_worker"]


